main page full adaptive done

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -516,7 +516,7 @@
             <button class="banner__btn btn-green menu-2">Получить проект дома</button>
           </div>
         </div>
-        <img class="banner__bg" src="../images/banner-texture.png" alt="banner">
+        <img class="banner__bg" src="images/banner-texture.png" alt="banner">
       </div>
     </div>
   </div>
@@ -784,7 +784,7 @@
                     <p>2 санузла</p>
                   </li>
                   <li class="projects__options-item projects__options-info">
-                    <img class="projects__options-img" src="../images/info.svg" alt="info">
+                    <img class="projects__options-img" src="images/info.svg" alt="info">
                     <p>Инфо</p>
                     <span></span>
                   </li>
@@ -831,7 +831,7 @@
                     <p>2 санузла</p>
                   </li>
                   <li class="projects__options-item projects__options-info">
-                    <img class="projects__options-img" src="../images/info.svg" alt="info">
+                    <img class="projects__options-img" src="images/info.svg" alt="info">
                     <p>Инфо</p>
                     <span></span>
                   </li>
@@ -878,7 +878,101 @@
                     <p>2 санузла</p>
                   </li>
                   <li class="projects__options-item projects__options-info">
-                    <img class="projects__options-img" src="../images/info.svg" alt="info">
+                    <img class="projects__options-img" src="images/info.svg" alt="info">
+                    <p>Инфо</p>
+                    <span></span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="projects__slider-item">
+            <div class="projects__item">
+              <img class="projects__item-img" src="images/projects-1.png" alt="projects">
+              <div class="projects__item-content">
+                <h3 class="projects__item-name">Проект КД-178</h3>
+                <p class="projects__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
+                  Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
+                <div class="projects__item-btns">
+                  <button class="btn-green">Хочу такой дом</button>
+                  <button class="btn-grey">Что входит в постройку</button>
+                </div>
+              </div>
+              <div class="projects__options">
+                <ul class="projects__options-list">
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/этажи.svg" alt="etagi">
+                    <p>1 этаж</p>
+                  </li>
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/комнаты.svg" alt="room">
+                    <p>3 комнаты</p>
+                  </li>
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/метраж.svg" alt="metrazh">
+                    <p>106м</p>
+                  </li>
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/терасса.svg" alt="terassa">
+                    <p>Терасса 6х3м</p>
+                  </li>
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/площадь.svg" alt="ploshad">
+                    <p>10х16м</p>
+                  </li>
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/сортиры.svg" alt="wc">
+                    <p>2 санузла</p>
+                  </li>
+                  <li class="projects__options-item projects__options-info">
+                    <img class="projects__options-img" src="images/info.svg" alt="info">
+                    <p>Инфо</p>
+                    <span></span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="projects__slider-item">
+            <div class="projects__item">
+              <img class="projects__item-img" src="images/projects-1.png" alt="projects">
+              <div class="projects__item-content">
+                <h3 class="projects__item-name">Проект КД-178</h3>
+                <p class="projects__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
+                  Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
+                <div class="projects__item-btns">
+                  <button class="btn-green">Хочу такой дом</button>
+                  <button class="btn-grey">Что входит в постройку</button>
+                </div>
+              </div>
+              <div class="projects__options">
+                <ul class="projects__options-list">
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/этажи.svg" alt="etagi">
+                    <p>1 этаж</p>
+                  </li>
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/комнаты.svg" alt="room">
+                    <p>3 комнаты</p>
+                  </li>
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/метраж.svg" alt="metrazh">
+                    <p>106м</p>
+                  </li>
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/терасса.svg" alt="terassa">
+                    <p>Терасса 6х3м</p>
+                  </li>
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/площадь.svg" alt="ploshad">
+                    <p>10х16м</p>
+                  </li>
+                  <li class="projects__options-item">
+                    <img class="projects__options-img" src="images/сортиры.svg" alt="wc">
+                    <p>2 санузла</p>
+                  </li>
+                  <li class="projects__options-item projects__options-info">
+                    <img class="projects__options-img" src="images/info.svg" alt="info">
                     <p>Инфо</p>
                     <span></span>
                   </li>
@@ -963,16 +1057,17 @@
           </div>
         </div>
 
+        <img class="map__img" src="images/map.svg" alt="map">
+
         <div class="map__rec">
           <div class="map__rec-item">
             <h6 class="map__rec-value num">93%</h6>
-            <p class="map__rec-text">клиентов рекомендуют нас<span>*</span></p>
-            <p class="map__rec-text"><span>*</span>Мы следим за индексом NPS — уровнем лояльности наших клиентов</p>
+            <p class="map__rec-text first">клиентов рекомендуют нас</p>
+            <p class="map__rec-text second">Мы следим за индексом NPS — уровнем лояльности наших клиентов</p>
           </div>
           <button class="btn-green">Готовые проекты</button>
         </div>
 
-        <img class="map__img" src="images/map.svg" alt="map">
       </div>
     </div>
   </div>
@@ -986,53 +1081,131 @@
           <h5 class="blog__suptitle">В данном блоке мы рассказываем про наши проекты, подробно разбираем процессы работ
             и даем полезные советы</h5>
         </div>
-        <div class="blog__content">
-          <div class="blog__video">
-            <iframe width="770" height="470"
-              src="https://www.youtube.com/embed/GVT4rTfpsos?si=enwWPAmjVARgCZRg&amp;controls=0"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-            <div class="blog__video-about">
-              <h6 class="blog__video-date small">24 ноября 2023</h6>
-              <h3 class="blog__video-name">Монтаж свайного фундамента | Сюрпризы под землей</h3>
-              <p class="blog__video-desc">Данный объект можем назвать одним из самых интересных и запоминающихся. <br> И
-                вот почему…</p>
+        <div class="blog__body">
+          <div class="blog__slider">
+            <div class="blog__slider-item">
+              <div class="blog__video">
+                <iframe width="770" height="470"
+                  src="https://www.youtube.com/embed/GVT4rTfpsos?si=enwWPAmjVARgCZRg&amp;controls=0"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+                <div class="blog__video-about">
+                  <h6 class="blog__video-date small">24 ноября 2023</h6>
+                  <h3 class="blog__video-name">Монтаж свайного фундамента | Сюрпризы под землей</h3>
+                  <p class="blog__video-desc">Данный объект можем назвать одним из самых интересных и запоминающихся.
+                    <br>
+                    И
+                    вот почему…
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="blog__slider-item">
+              <div class="blog__video">
+                <iframe width="770" height="470"
+                  src="https://www.youtube.com/embed/GVT4rTfpsos?si=enwWPAmjVARgCZRg&amp;controls=0"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+                <div class="blog__video-about">
+                  <h6 class="blog__video-date small">24 ноября 2023</h6>
+                  <h3 class="blog__video-name">Отзыв о Каркасном доме КД-145 от компании DSK-VIRA</h3>
+                  <p class="blog__video-desc">Данный объект можем назвать одним из самых интересных и запоминающихся.
+                    <br>
+                    И
+                    вот почему…
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="blog__slider-item">
+              <div class="blog__video">
+                <iframe width="770" height="470"
+                  src="https://www.youtube.com/embed/GVT4rTfpsos?si=enwWPAmjVARgCZRg&amp;controls=0"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+                <div class="blog__video-about">
+                  <h6 class="blog__video-date small">24 ноября 2023</h6>
+                  <h3 class="blog__video-name">Г. Пушкино. Купель и обшивка свайного фундамента.</h3>
+                  <p class="blog__video-desc">Данный объект можем назвать одним из самых интересных и запоминающихся.
+                    <br>
+                    И
+                    вот почему…
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="blog__slider-item">
+              <div class="blog__video">
+                <iframe width="770" height="470"
+                  src="https://www.youtube.com/embed/GVT4rTfpsos?si=enwWPAmjVARgCZRg&amp;controls=0"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+                <div class="blog__video-about">
+                  <h6 class="blog__video-date small">24 ноября 2023</h6>
+                  <h3 class="blog__video-name">Мосты холода | Чем чревата экономия на строительстве</h3>
+                  <p class="blog__video-desc">Данный объект можем назвать одним из самых интересных и запоминающихся.
+                    <br>
+                    И
+                    вот почему…
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="blog__slider-item">
+              <div class="blog__video">
+                <iframe width="770" height="470"
+                  src="https://www.youtube.com/embed/GVT4rTfpsos?si=enwWPAmjVARgCZRg&amp;controls=0"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+                <div class="blog__video-about">
+                  <h6 class="blog__video-date small">24 ноября 2023</h6>
+                  <h3 class="blog__video-name">Отзыв о Каркасном доме КД-145 от компании DSK-VIRA</h3>
+                  <p class="blog__video-desc">Данный объект можем назвать одним из самых интересных и запоминающихся.
+                    <br>
+                    И
+                    вот почему…
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
-
-          <ul class="blog__list">
-            <li class="blog__item">
+          <div class="blog__list">
+            <div class="blog__item">
               <h6 class="blog__item-date small">24 ноября 2023</h6>
               <a class="blog__item-link" href="#!">
                 <p class="blog__item-name">Монтаж свайного фундамента | Сюрпризы под землей</p>
               </a>
-            </li>
-            <li class="blog__item">
+            </div>
+            <div class="blog__item">
               <h6 class="blog__item-date small">24 ноября 2023</h6>
               <a class="blog__item-link" href="#!">
                 <p class="blog__item-name">Отзыв о Каркасном доме КД-145 от компании DSK-VIRA</p>
               </a>
-            </li>
-            <li class="blog__item">
+            </div>
+            <div class="blog__item">
               <h6 class="blog__item-date small">24 ноября 2023</h6>
               <a class="blog__item-link" href="#!">
                 <p class="blog__item-name">Г. Пушкино. Купель и обшивка свайного фундамента.</p>
               </a>
-            </li>
-            <li class="blog__item">
+            </div>
+            <div class="blog__item">
               <h6 class="blog__item-date small">24 ноября 2023</h6>
               <a class="blog__item-link" href="#!">
                 <p class="blog__item-name">Мосты холода | Чем чревата экономия на строительстве</p>
               </a>
-            </li>
-            <li class="blog__item">
+            </div>
+            <div class="blog__item">
               <h6 class="blog__item-date small">24 ноября 2023</h6>
               <a class="blog__item-link" href="#!">
                 <p class="blog__item-name">Отзыв о Каркасном доме КД-145 от компании DSK-VIRA</p>
               </a>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
