fix block & path icons

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -390,7 +390,7 @@
                       </div>
                     </div>
                     <div class="calculation__gift">
-                      <img class="calculation__gift-icon" src="images/gift.svg" loading="lazy" alt="gift">
+                      <img class="calculation__gift-icon" src="images/icons/gift.svg" loading="lazy" alt="gift">
                       <h6 class="small">При заказе дома в базовой комплектации вы получите в подарок <span
                           class="colored-text">«Входную дверь»</span></h6>
                     </div>
@@ -416,7 +416,7 @@
                       </div>
                     </div>
                     <div class="calculation__gift">
-                      <img class="calculation__gift-icon" src="images/gift.svg" loading="lazy" alt="gift">
+                      <img class="calculation__gift-icon" src="images/icons/gift.svg" loading="lazy" alt="gift">
                       <h6 class="small">При заказе дома в базовой комплектации вы получите в подарок <span
                           class="colored-text">«Входную дверь»</span></h6>
                     </div>
@@ -442,7 +442,7 @@
                       </div>
                     </div>
                     <div class="calculation__gift">
-                      <img class="calculation__gift-icon" src="images/gift.svg" loading="lazy" alt="gift">
+                      <img class="calculation__gift-icon" src="images/icons/gift.svg" loading="lazy" alt="gift">
                       <h6 class="small">При заказе дома в базовой комплектации вы получите в подарок <span
                           class="colored-text">«Входную дверь»</span></h6>
                     </div>
@@ -468,7 +468,7 @@
                       </div>
                     </div>
                     <div class="calculation__gift">
-                      <img class="calculation__gift-icon" src="images/gift.svg" loading="lazy" alt="gift">
+                      <img class="calculation__gift-icon" src="images/icons/gift.svg" loading="lazy" alt="gift">
                       <h6 class="small">При заказе дома в базовой комплектации вы получите в подарок <span
                           class="colored-text">«Входную дверь»</span></h6>
                     </div>
@@ -720,8 +720,7 @@
                 </p>
                 <button class="btn-white">Подробнее про проектирование</button>
               </div>
-              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy"
-                alt="stages-iamges">
+              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy" alt="stages-iamges">
             </div>
           </div>
           <div class="stages__content-item">
@@ -734,8 +733,7 @@
                 </p>
                 <button class="btn-white">Подробнее про фундамент</button>
               </div>
-              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy"
-                alt="stages-iamges">
+              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy" alt="stages-iamges">
             </div>
           </div>
           <div class="stages__content-item">
@@ -748,8 +746,7 @@
                 </p>
                 <button class="btn-white">Подробнее про каркас</button>
               </div>
-              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy"
-                alt="stages-iamges">
+              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy" alt="stages-iamges">
             </div>
           </div>
           <div class="stages__content-item">
@@ -762,8 +759,7 @@
                 </p>
                 <button class="btn-white">Подробнее про утепление и монтаж кровли</button>
               </div>
-              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy"
-                alt="stages-iamges">
+              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy" alt="stages-iamges">
             </div>
           </div>
           <div class="stages__content-item">
@@ -776,8 +772,7 @@
                 </p>
                 <button class="btn-white">Подробнее про монтажные работы</button>
               </div>
-              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy"
-                alt="stages-iamges">
+              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy" alt="stages-iamges">
             </div>
           </div>
           <div class="stages__content-item">
@@ -790,8 +785,7 @@
                 </p>
                 <button class="btn-white">Подробнее про монтаж коммуникаций в доме</button>
               </div>
-              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy"
-                alt="stages-iamges">
+              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy" alt="stages-iamges">
             </div>
           </div>
           <div class="stages__content-item">
@@ -804,8 +798,7 @@
                 </p>
                 <button class="btn-white">Подробнее про внутренняя отделка дома</button>
               </div>
-              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy"
-                alt="stages-iamges">
+              <img class="stages__block-img" src="images/stages/stages-block-2.png" loading="lazy" alt="stages-iamges">
             </div>
           </div>
         </div>
