add filter & sidebar & script

--- a/app/pages/works.html
+++ b/app/pages/works.html
@@ -29,7 +29,7 @@
         <div class="filter">
           <div class="filter__items">
             <div class="filter__item">
-              <button class="filter__btn small" data-value="Одноэтажные дома">Одноэтажные дома</button>
+              <button class="filter__item-btn small" data-value="Одноэтажные дома">Одноэтажные дома</button>
               <ul class="filter__list">
                 <li class="filter__list-item">
                   <a class="filter__list-link small" href="#!" data-value="Одноэтажные дома">Одноэтажные дома</a>
@@ -42,7 +42,7 @@
           </div>
           <div class="filter__items">
             <div class="filter__item">
-              <button class="filter__btn small" data-value="По дате добавления">По дате добавления</button>
+              <button class="filter__item-btn small" data-value="По дате добавления">По дате добавления</button>
               <ul class="filter__list">
                 <li class="filter__list-item">
                   <a class="filter__list-link small" href="#!" data-value="По цене">По цене</a>
@@ -56,7 +56,7 @@
               </ul>
             </div>
             <div class="filter__item">
-              <button class="filter__btn small" data-value="10">Показать: 10</button>
+              <button class="filter__item-btn small" data-value="10">Показать: 10</button>
               <ul class="filter__list">
                 <li class="filter__list-item">
                   <a class="filter__list-link small" href="#!" data-value="10">10</a>
