--- a/app/pages/about.html
+++ b/app/pages/about.html
@@ -30,7 +30,7 @@
           <source media="(max-width: 1024px)" srcset="images/page-about/about-hand-mobile.png">
           <img class="about__img" src="images/page-about/about-hand.png" loading="lazy" alt="hero" loading="lazy">
         </picture>
-        
+
         <h5 class="about__text">
           Компания «Вира» - динамично-развивающаяся компания. Мы занимаемся заготовкой леса, изготовлением,
           проектированием, сборкой домов, бань, беседок из оцилиндрованного и рубленого бревна, а также клеёного
@@ -72,7 +72,7 @@
         <div class="about-us__content">
           <div class="about-us__head">
             <h5 class="about-us__suptitle">Приветствую! Меня зовут</h5>
-            <h3 class="about-us__title">Швороб Анастасия </h3>
+            <h2 class="about-us__title">Швороб Анастасия </h2>
             <h5 class="about-us__suptitle">в домостроении я с 2005 года. </h5>
           </div>
           <div class="about-us__text">
@@ -96,7 +96,7 @@
     <div class="container">
       <div class="case__inner">
         <div class="case__head">
-          <h2 class="case__title">Выберите какой дом вы получите от 48 дней</h2>
+          <h2 class="case__title">Мы готовы предложить вам</h2>
           <h5 class="case__subtitle">Более 18 готовых проектов</h5>
         </div>
 
@@ -104,7 +104,12 @@
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
-                <img src="images/case/case1.png" loading="lazy" alt="case" class="case__cover-img">
+                <picture class="case__picture">
+                  <source media="(min-width: 1025px)" srcset="images/case/case-1.png">
+                  <source media="(min-width: 601px)" srcset="images/case/case-1-planshet.png">
+                  <source media="(max-width: 600px)" srcset="images/case/case-1-mobile.png">
+                  <img class="case__cover-img" src="images/case/case-1.png" loading="lazy" alt="case" loading="lazy">
+                </picture>
                 <span class="case__cover-btn"></span>
               </div>
               <div class="case__item-body">
@@ -152,7 +157,12 @@
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
-                <img src="images/case/case1.png" loading="lazy" alt="case" class="case__cover-img">
+                <picture class="case__picture">
+                  <source media="(min-width: 1025px)" srcset="images/case/case-1.png">
+                  <source media="(min-width: 601px)" srcset="images/case/case-1-planshet.png">
+                  <source media="(max-width: 600px)" srcset="images/case/case-1-mobile.png">
+                  <img class="case__cover-img" src="images/case/case-1.png" loading="lazy" alt="case" loading="lazy">
+                </picture>
                 <span class="case__cover-btn"></span>
               </div>
               <div class="case__item-body">
@@ -200,7 +210,12 @@
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
-                <img src="images/case/case1.png" loading="lazy" alt="case" class="case__cover-img">
+                <picture class="case__picture">
+                  <source media="(min-width: 1025px)" srcset="images/case/case-1.png">
+                  <source media="(min-width: 601px)" srcset="images/case/case-1-planshet.png">
+                  <source media="(max-width: 600px)" srcset="images/case/case-1-mobile.png">
+                  <img class="case__cover-img" src="images/case/case-1.png" loading="lazy" alt="case" loading="lazy">
+                </picture>
                 <span class="case__cover-btn"></span>
               </div>
               <div class="case__item-body">
@@ -281,7 +296,7 @@
     <div class="container">
       <div class="history__inner">
         <div class="history__head">
-          <h3 class="history__title">История компании в 18 лет</h3>
+          <h2 class="history__title">История компании в 18 лет</h2>
           <h5 class="history__suptitle">Мы не работаем по накатанной, мы развиваемся в соответствии с тенденциями рынка
           </h5>
         </div>
