--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -4,15 +4,19 @@
   <div class="social">
     <a class="social__link" href="viber://chat?number=89165562526">
       <img class="social__img" src="images/social/Viber.svg" alt="viber">
+      <span class="social__text small">Написать в вайбер</span>
     </a>
     <a class="social__link" href="https://wa.me/89165562526">
       <img class="social__img" src="images/social/whatsapp.svg" alt="whatsapp">
+      <span class="social__text small">Написать в ватсапп</span>
     </a>
     <a class="social__link" href="https://t.me/89165562526">
       <img class="social__img" src="images/social/telegram.svg" alt="telegram">
+      <span class="social__text small">Написать в телеграм</span>
     </a>
     <a class="social__link" href="tel:89165562526">
       <img class="social__img" src="images/icons/tel.svg" alt="tel">
+      <span class="social__text small">Заказать звонок</span>
     </a>
   </div>
 
@@ -51,7 +55,12 @@
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
-                <img src="images/case/case1.png" loading="lazy" alt="case" class="case__cover-img">
+                <picture class="case__picture">
+                  <source media="(min-width: 1025px)" srcset="images/case/case-1.png">
+                  <source media="(min-width: 601px)" srcset="images/case/case-1-planshet.png">
+                  <source media="(max-width: 600px)" srcset="images/case/case-1-mobile.png">
+                  <img class="case__cover-img" src="images/case/case-1.png" loading="lazy" alt="case" loading="lazy">
+                </picture>
                 <span class="case__cover-btn"></span>
               </div>
               <div class="case__item-body">
@@ -99,7 +108,12 @@
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
-                <img src="images/case/case1.png" loading="lazy" alt="case" class="case__cover-img">
+                <picture class="case__picture">
+                  <source media="(min-width: 1025px)" srcset="images/case/case-1.png">
+                  <source media="(min-width: 601px)" srcset="images/case/case-1-planshet.png">
+                  <source media="(max-width: 600px)" srcset="images/case/case-1-mobile.png">
+                  <img class="case__cover-img" src="images/case/case-1.png" loading="lazy" alt="case" loading="lazy">
+                </picture>
                 <span class="case__cover-btn"></span>
               </div>
               <div class="case__item-body">
@@ -147,7 +161,12 @@
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
-                <img src="images/case/case1.png" loading="lazy" alt="case" class="case__cover-img">
+                <picture class="case__picture">
+                  <source media="(min-width: 1025px)" srcset="images/case/case-1.png">
+                  <source media="(min-width: 601px)" srcset="images/case/case-1-planshet.png">
+                  <source media="(max-width: 600px)" srcset="images/case/case-1-mobile.png">
+                  <img class="case__cover-img" src="images/case/case-1.png" loading="lazy" alt="case" loading="lazy">
+                </picture>
                 <span class="case__cover-btn"></span>
               </div>
               <div class="case__item-body">
@@ -197,7 +216,12 @@
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
-                <img src="images/case/case1.png" loading="lazy" alt="case" class="case__cover-img">
+                <picture class="case__picture">
+                  <source media="(min-width: 1025px)" srcset="images/case/case-1.png">
+                  <source media="(min-width: 601px)" srcset="images/case/case-1-planshet.png">
+                  <source media="(max-width: 600px)" srcset="images/case/case-1-mobile.png">
+                  <img class="case__cover-img" src="images/case/case-1.png" loading="lazy" alt="case" loading="lazy">
+                </picture>
                 <span class="case__cover-btn"></span>
               </div>
               <div class="case__item-body">
@@ -245,7 +269,12 @@
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
-                <img src="images/case/case1.png" loading="lazy" alt="case" class="case__cover-img">
+                <picture class="case__picture">
+                  <source media="(min-width: 1025px)" srcset="images/case/case-1.png">
+                  <source media="(min-width: 601px)" srcset="images/case/case-1-planshet.png">
+                  <source media="(max-width: 600px)" srcset="images/case/case-1-mobile.png">
+                  <img class="case__cover-img" src="images/case/case-1.png" loading="lazy" alt="case" loading="lazy">
+                </picture>
                 <span class="case__cover-btn"></span>
               </div>
               <div class="case__item-body">
@@ -293,7 +322,12 @@
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
-                <img src="images/case/case1.png" loading="lazy" alt="case" class="case__cover-img">
+                <picture class="case__picture">
+                  <source media="(min-width: 1025px)" srcset="images/case/case-1.png">
+                  <source media="(min-width: 601px)" srcset="images/case/case-1-planshet.png">
+                  <source media="(max-width: 600px)" srcset="images/case/case-1-mobile.png">
+                  <img class="case__cover-img" src="images/case/case-1.png" loading="lazy" alt="case" loading="lazy">
+                </picture>
                 <span class="case__cover-btn"></span>
               </div>
               <div class="case__item-body">
