--- a/app/pages/technical-supervision.html
+++ b/app/pages/technical-supervision.html
@@ -1,6 +1,6 @@
 <!--=include header.html-->
 <!--=include sprite.html-->
-<main class="main">
+<main class="main supervision-page">
   <div class="page__head">
     <div class="container">
       <div class="breadcrumbs">
@@ -57,30 +57,36 @@
         </h5>
         <ul class="supervision-advantages__list">
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy"
+              alt="arrow">
             <p class="supervision-advantages__item-text">Проверить качество и объем строительных работ</p>
           </li>
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy"
+              alt="arrow">
             <p class="supervision-advantages__item-text">Построить и ввести объект в заданный срок, без простоев</p>
           </li>
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy"
+              alt="arrow">
             <p class="supervision-advantages__item-text">Избежать дополнительных затрат на строительные материалы и
               услуги</p>
           </li>
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy"
+              alt="arrow">
             <p class="supervision-advantages__item-text">Узаконить уже сделанную перепланировку и свести штраф к
               минимуму</p>
           </li>
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy"
+              alt="arrow">
             <p class="supervision-advantages__item-text">Быстро и по закону сделать перепланировку квартиры и избежать
               штрафа</p>
           </li>
           <li class="supervision-advantages__item">
-            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
+            <img class="supervision-advantages____item-img" src="images/icons/supervision-arrow.svg" loading="lazy"
+              alt="arrow">
             <p class="supervision-advantages__item-text">Проверить качество и сэкономить деньги при приемке квартиры в
               новостройке</p>
           </li>
@@ -196,7 +202,7 @@
             процессе</p>
           <button class="btn-green">Получить консультацию</button>
         </div>
-        <img class="why__img" src="images/helmet.png" loading="lazy" alt="helmet">
+        <img class="why__img" src="images/page-supervision/helmet.png" loading="lazy" alt="helmet">
       </div>
     </div>
   </div>
