--- a/app/pages/projection.html
+++ b/app/pages/projection.html
@@ -1,6 +1,6 @@
 <!--=include header.html-->
 <!--=include sprite.html-->
-<main class="main">
+<main class="main projection-page">
   <div class="page__head">
     <div class="container">
       <div class="breadcrumbs">
@@ -14,7 +14,7 @@
             </svg>
           </li>
           <li class="breadcrumbs__item">
-            <a href="#!" class="breadcrumbs__link">Услуги</a>
+            <a href="#!" class="breadcrumbs__link">Строительство</a>
           </li>
           <li class="breadcrumbs__item">
             <svg class="breadcrumbs__arrow">
@@ -58,31 +58,23 @@
           <h3>В зависимости от строительных задач выделяют:</h3>
           <li class="projection-types__item">
             <img class="projection-types__item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
-            <p class="projection-types__item-text">Проверить качество и объем строительных работ</p>
+            <p class="projection-types__item-text">Проектирование надземного строительства</p>
           </li>
           <li class="projection-types__item">
             <img class="projection-types__item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
-            <p class="projection-types__item-text">Построить и ввести объект в заданный срок, без простоев</p>
+            <p class="projection-types__item-text">Ландшафтное проектирование</p>
           </li>
           <li class="projection-types__item">
             <img class="projection-types__item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
-            <p class="projection-types__item-text">Избежать дополнительных затрат на строительные материалы и
-              услуги</p>
+            <p class="projection-types__item-text">Проектирование дорог и транспортных развязок</p>
           </li>
           <li class="projection-types__item">
             <img class="projection-types__item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
-            <p class="projection-types__item-text">Узаконить уже сделанную перепланировку и свести штраф к
-              минимуму</p>
+            <p class="projection-types__item-text">Проектирование инженерных сооружений</p>
           </li>
           <li class="projection-types__item">
             <img class="projection-types__item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
-            <p class="projection-types__item-text">Быстро и по закону сделать перепланировку квартиры и избежать
-              штрафа</p>
-          </li>
-          <li class="projection-types__item">
-            <img class="projection-types__item-img" src="images/icons/supervision-arrow.svg" loading="lazy" alt="arrow">
-            <p class="projection-types__item-text">Проверить качество и сэкономить деньги при приемке квартиры в
-              новостройке</p>
+            <p class="projection-types__item-text">Специальное проектирование</p>
           </li>
         </ul>
       </div>
@@ -98,31 +90,39 @@
             может содержать такие основные разделы:</h5>
         </div>
 
-        <div class="projection-composition__items">
-          <div class="projection-composition__item">
-            <span class="projection-composition__item-num">01</span>
-            <h3 class="projection-composition__item-title">Эскизный проект</h3>
-            <p class="projection-composition__item-text">Набор предварительных эскизов здания и его элементов. Эскизы –
-              это
-              упрощенные рисунки, схемы, наброски архитектурных и конструктивных объектов. Эскизный проект используется
-              для выработки и согласования с заказчиком основных архитектурных, конструктивных, инженерных и
-              дизайнерских решений, внесения правок.
-            </p>
+        <div class="projection-composition__slider">
+          <div class="projection-composition__slider-item">
+            <div class="projection-composition__item">
+              <span class="projection-composition__item-num">01</span>
+              <h3 class="projection-composition__item-title">Эскизный проект</h3>
+              <p class="projection-composition__item-text">Набор предварительных эскизов здания и его элементов. Эскизы
+                –
+                это
+                упрощенные рисунки, схемы, наброски архитектурных и конструктивных объектов. Эскизный проект
+                используется
+                для выработки и согласования с заказчиком основных архитектурных, конструктивных, инженерных и
+                дизайнерских решений, внесения правок.
+              </p>
+            </div>
           </div>
-          <div class="projection-composition__item">
-            <span class="projection-composition__item-num">02</span>
-            <h3 class="projection-composition__item-title">Проектная документация</h3>
-            <p class="projection-composition__item-text">Основная часть проекта, в которой определяются
-              инженерно-технические, технологические, конструктивные решения будущего здания. Этот раздел проходит
-              экспертизу и согласования, используется для оформления разрешения на строительство.
-            </p>
+          <div class="projection-composition__slider-item">
+            <div class="projection-composition__item">
+              <span class="projection-composition__item-num">02</span>
+              <h3 class="projection-composition__item-title">Проектная документация</h3>
+              <p class="projection-composition__item-text">Основная часть проекта, в которой определяются
+                инженерно-технические, технологические, конструктивные решения будущего здания. Этот раздел проходит
+                экспертизу и согласования, используется для оформления разрешения на строительство.
+              </p>
+            </div>
           </div>
-          <div class="projection-composition__item">
-            <span class="projection-composition__item-num">03</span>
-            <h3 class="projection-composition__item-title">Рабочий проект</h3>
-            <p class="projection-composition__item-text">Включает схема и чертежи конструкций, которые непосредственно
-              используются строителями при возведении здания и выполнении монтажных работ.
-            </p>
+          <div class="projection-composition__slider-item">
+            <div class="projection-composition__item">
+              <span class="projection-composition__item-num">03</span>
+              <h3 class="projection-composition__item-title">Рабочий проект</h3>
+              <p class="projection-composition__item-text">Включает схема и чертежи конструкций, которые непосредственно
+                используются строителями при возведении здания и выполнении монтажных работ.
+              </p>
+            </div>
           </div>
         </div>
 
@@ -263,21 +263,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="why block">
-    <div class="container">
-      <div class="why__inner">
-        <div class="why__content">
-          <h2 class="why__title">Зачем мне платить за то, что я могу сделать самостоятельно</h2>
-          <p>незачем. вы запросто справитесь и с согласованием перепланировки и с приемкой новой квартиры и еще много с
-            чем… но тогда вам обязательно надо знать некоторые подводные камни, с которыми вы обязательно столкнетесь в
-            процессе</p>
-          <button class="btn-green">Получить консультацию</button>
-        </div>
-        <img class="why__img" src="images/page-supervision/helmet.png" loading="lazy" alt="helmet">
       </div>
     </div>
   </div>
