--- a/app/pages/about.html
+++ b/app/pages/about.html
@@ -100,7 +100,7 @@
           <h5 class="case__subtitle">Более 18 готовых проектов</h5>
         </div>
 
-        <div id="case__slider1" class="case__slider active">
+        <div class="case__slider case__slider-1 active">
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
