--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -51,7 +51,7 @@
           <button id="case__tab2" class="case__tab-item menu-1" type="button">Двухэтажные дома</button>
         </div>
 
-        <div id="case__slider1" class="case__slider active">
+        <div id="case__slider1" class="case__slider case__slider-1 active">
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
@@ -212,7 +212,7 @@
             </div>
           </div>
         </div>
-        <div id="case__slider2" class="case__slider">
+        <div id="case__slider2" class="case__slider case__slider-2">
           <div class="case__slider-item">
             <div class="case__item">
               <div class="case__cover">
@@ -871,7 +871,7 @@
           <h5 class="discount__suptitle">И получить <span>скидку 20%</span> на мебель от наших партнеров!</h5>
         </div>
         <form class="discount__form">
-          <input class="discount__input small" type="tel" maxlength="12" placeholder="Номер телефона" value="+7">
+          <input class="discount__input small" type="tel" placeholder="Номер телефона">
           <button class="discount__btn btn-green" type="submit">Получить скидку</button>
         </form>
         <img class="discount__img" src="images/hand.png" loading="lazy" alt="hand">
@@ -1219,7 +1219,7 @@
     </div>
   </div>
 
-  <div class="blog">
+  <div class="blog" style="display: none;">
     <img class="decor" src="images/decor/decor-top.png" loading="lazy" alt="">
     <div class="container">
       <div class="blog__inner">
